# markable_reader

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/io/: buffer.rs  buffered_markable_reader.rs  markable_reader.rs  mod.rs
